--- a/site/themes/blog/layout/basico/header.ejs
+++ b/site/themes/blog/layout/basico/header.ejs
@@ -24,7 +24,7 @@
       <!-- Navbar Brand -->
       <div class="navbar-header d-flex align-items-center justify-content-between">
         <!-- Navbar Brand -->
-        <a href="index.html" class="navbar-brand">Bootstrap Blog</a>
+        <a href="index.html" class="navbar-brand">BBB-2018.online</a>
         <!-- Toggle Button-->
         <button type="button" data-toggle="collapse" data-target="#navbarcollapse" aria-controls="navbarcollapse" aria-expanded="false"
           aria-label="Toggle navigation" class="navbar-toggler">
@@ -39,9 +39,12 @@
           <li class="nav-item">
             <a href="/" class="nav-link ">Home</a>
           </li>
-          <!-- <li class="nav-item">
-            <a href="index.html" class="nav-link "></a>
-          </li> -->
+          <li class="nav-item">
+            <a href="/participantes" class="nav-link ">Participantes</a>
+          </li>
+          <li class="nav-item">
+            <a href="/votacao" class="nav-link ">Votação</a>
+          </li>
         </ul>
         <div class="navbar-text">
           <a href="#" class="search-btn">
